src/scss/templates/_home.scss
// HOMEPAGE

/**
  * Hero
  */
.page-template-home .hero__button {
  @media (min-width: $tablet) {
    display: flex;
    justify-content: flex-end;
  }
}

/**
  * Hero Below Section
  */
.hero-below__title {
  color: $color__primary;
  text-transform: uppercase;
}
.hero-below__image {
  @media (min-width: $tablet) {
    margin-top: calc-em(-75px);
  }
}

.macbook {
  padding: 0;
  margin: 0 auto;
  max-width: 800px;
}

.macbook__screen {
  background: #000;
  border-radius: 3% 3% 0.5% 0.5% / 5%;
  margin: 0 auto;
  /* for aspect ratio */
  position: relative;
  width: 80%;
}

.macbook__screen:before {
  border: 2px solid #cacacc;
  border-radius: 3% 3% 0.5% 0.5% / 5%;
  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.8) inset, 0 0 1px 2px rgba(255, 255, 255, 0.3) inset;
  content: "";
  display: block;
  /* for aspect ratio ~67:100 */
  padding-top: 67%;
}

.macbook__screen:after {
  content: "";
  border-top: 2px solid rgba(255, 255, 255, 0.15);
  position: absolute;
  bottom: 0.75%;
  left: 0.5%;
  padding-top: 1%;
  width: 99%;
}

.macbook__viewport {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  margin: 7.3% 3.2%;
  background: #333;
  video {
    height: 100%;
  }
}

.macbook__base {
  /* for aspect ratio */
  position: relative;
  width: 100%;
}

.macbook__base:before {
  content: "";
  display: block;
  /* for aspect ratio ~33:1000*/
  padding-top: 3.3%;
  background: linear-gradient(#eaeced, #edeef0 55%, #fff 55%, #8a8b8f 56%, #999ba0 61%, #4B4B4F 84%, #262627 89%, rgba(0, 0, 0, .01) 98%);
  border-radius: 0 0 10% 10%/ 0 0 50% 50%;
}

.macbook__base::after {
  background: linear-gradient(90deg, rgba(0, 0, 0, 0.5), rgba(255, 255, 255, 0.8) 0.5%, rgba(0, 0, 0, 0.4) 3.3%, transparent 15%, rgba(255, 255, 255, 0.8) 50%, transparent 85%, rgba(0, 0, 0, 0.4) 96.7%, rgba(255, 255, 255, 0.8) 99.5%, rgba(0, 0, 0, 0.5) 100%);
  content: "";
  height: 53%;
  position: absolute;
  top: 0;
  width: 100%;
}

.macbook__notch {
  background: #ddd;
  border-radius: 0 0 7% 7% / 0 0 95% 95%;
  box-shadow: -5px -1px 3px rgba(0, 0, 0, 0.2) inset, 5px -1px 3px rgba(0, 0, 0, 0.2) inset;
  margin-left: auto;
  margin-right: auto;
  margin-top: -3.5%;
  z-index: 2;
  /* for aspect ratio */
  position: relative;
  width: 14%;
}

.macbook__notch:before {
  content: "";
  display: block;
  /* for aspect ratio ~1:10 */
  padding-top: 10%;
}


/**
  * Benefits Section
  */
.benefits {}

.benefits__title {
  @media (min-width: $tablet) {
    padding-left: calc-em(25px);
  }
}

.benefits__item {
  padding-top: calc-em(25px);
  padding-bottom: calc-em(25px);
  @media (min-width: $tablet) {
    padding-top: calc-em(60px);
  }
}

.benefits__item-title {
  color: $color__primary;
  text-transform: uppercase;
}

.benefits__item-text {
  padding-top: 0.25em;
}

// the line ine middle of each image
.benefits__line {
  position: absolute;
  left: 8%;
  top: calc(50% - 40px);
  width: auto; //uses animations.js tween to set width on scrollTo
  height: 4px;
  background: $color__accent;
  z-index: 1;
}
.benefits__img-wrap {
  position: relative;
}
.benefits__img {
  position: relative;
  border-radius: 100%;
  width: 200px;
  height: 200px;
  z-index: 2;
  @media (min-width: $tablet) {
    width: 225px;
    height: 225px; 
  }
  &--has-border {
    border: 4px solid $color__accent;
  }
}

/**
  * CTA Section
  */

.cta__title {
  color: $color__accent;
  text-transform: uppercase;
}
.cta__form {
  @media (min-width: $tablet) {
    margin-top: calc-em(-30px);
  }
}


/**
  * Testimonials Section
  */
.testimonial.row {
  align-items: center;
}

.testimonial__title {
  font-size: 1.4em;
  color: color('white');
  line-height: 1;
}

.testimonial__name {
  @extend h2;
  margin-bottom: 0.4em;
}

.testimonial__description {
  p {
    line-height: 1.7;
  }
}

.testimonial__title {
  text-transform: uppercase;
  font-weight: bold;
  color: $color__primary;
}

.testimonial__position { 
  margin-top: calc-em(10px);
  color: lighten($color__primary,20%);
  font-weight: 300; 
}

.testimonial__button {
  margin-top: calc-em(100px);
}


/**
  * Audience Section
  */


.audience__title {
  position: relative;
  color: $color__text;
  @media (min-width: $tablet) {
    color: white;
    bottom: 75px;
  }
}

// the carousel within this
.carousel--audience-nav {
  position: relative;
  z-index: 9;
  @media (min-width: $tablet) {
    top: 75px;
  }
  .slick-slide {
    width: auto!important;
    cursor: pointer;
  }
  .slick-slide.slick-current li {
    background: $color__primary;
    color: white;
    width: auto!important;
    appearance: none;
  }
}
.carousel__nav-item {
  display: inline-block;
  list-style-type: none;
  margin: 0 calc-em(8px);
  background: transparent;
  border: 2px solid $color__primary;
  color: $color__primary;
  padding: calc-em(2px) calc-em(10px);
  vertical-align: middle;
  transform: perspective(1px) translateZ(0);
  position: relative;
  transition-property: color;
  transition-duration: 0.3s;
  &:first-child {
    margin-left: 0;
  }
  &:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: $color__primary--dark;
    transform: scaleX(0);
    transform-origin: 0 50%;
    transition: transform 0.3s ease-out;
  }
  &:hover, &:focus {
    color: white;
    cursor: pointer;
  }
  &:hover:before {
    transform: scaleX(1);
  }
}
#carousel--audience {
  .slick-list {
    overflow: visible;
    width: auto;
  }
}



/**
  * Unified Section
  */
.unified__item {
  margin-top: calc-em(20px);
  margin-bottom: calc-em(20px);
  padding: 0.5em;
  vertical-align: middle;
  transform: perspective(1px) translateZ(0);
  position: relative;
  transition-property: color;
  transition-duration: 0.3s;
  &:before {
    content: "";
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: darken(white, 2%);
    transform: scaleX(0);
    transform-origin: 0 50%;
    transition: transform 0.3s ease-out;
  }
  &:hover, &:focus, &:visited {
    color: white;
    cursor: pointer;
  }
  &:hover:before {
    transform: scaleX(1);
  }
  @media (min-width: $tablet) {
    display: flex;
    align-items: center;
  }
}

.unified__icon {
  color: $color__primary;
  width: 50px;
  height: 50px;
  margin: auto;
  @media (min-width: $tablet) {
    margin: 0;
  }
}

.unified__title {
  color: $color__secondary;
  @media (min-width: $tablet) {
    margin-left: calc-em(10px);
    text-align: left;
  }
}

.unified__button {
  margin-top: calc-em(20px);
}

.unified__spacer {
  position: relative;
  margin: calc-em(60px) 0;
}

// the absolute positioned device screenshot image
.unified__img {
  position: absolute;
  bottom: 0;
  left: 0;
  img {
    width: 445px;
    padding-bottom: calc-em(20px);
    transition: width 0.2s ease-out;
    @media (min-width: $desktop-lg) {
      width: 47%;
    }
  }
}

.unified__img--mobile {
  position: relative;
  bottom: auto;
  left: auto;
  margin: calc-em(25px) auto;
  img {
    width: 75%;
  }
}

